test building arch in parallel 1

--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -151,7 +151,7 @@ def android() {
                 ])
 
                 android.inside {
-                    sh "ls /home/vcx/artifacts"
+                    sh "ls runtime_android_build"
                 }
 
                 //Package .so files into .aar 
@@ -241,7 +241,6 @@ def buildAndroid(envn, arch) {
 
             sh 'sudo ./vcx/ci/scripts/installCert.sh'
             sh "LIBINDY_BRANCH=${LIBINDY_BRANCH} LIBINDY_VERSION=${LIBINDY_VERSION} LIBINDY_TAG=${LIBINDY_TAG} ./${ANDROID_SCRIPT_PATH} ${arch}"
-            sh "ls runtime_android_build || true"
         }
    }
 }
