--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -145,17 +145,18 @@ def android() {
                 
                 //Build .so files for arm64, x86, and arm
                 //workDir will be used to share .so's from different containers
-                workDir = System.getProperty("user.dir")
+                workDir = pwd()
                 sharedFolder = "${workDir}/artifacts"
-                sh 'ls ${workDir}'
-                sh 'mkdir ${sharedFolder}'
-                sh 'ls ${workDir}'
+                sh "ls ${workDir}"
+                sh "mkdir ${sharedFolder}"
+                sh "ls ${workDir}"
                 parallel([
                     "x86" : { buildAndroid(android, 'x86', sharedFolder) },
                     "arm" : { buildAndroid(android, 'arm', sharedFolder) },
                     // "arm64" : { buildAndroid(android, 'arm64') }
                 ])
 
+                sh "ls ${workDir}"
                 // android.inside {
                 //     sh "ls runtime_android_build"
                 // }
