--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -240,7 +240,8 @@ def fail() {
 def buildAndroid(android, arch, sharedFolder) {    
     node('ubuntu') {
         checkout scm
-        android.inside("-v ${sharedFolder}:/home/vcx/artifacts") {
+        containerFolder='/home/vcx/artifacts'
+        android.inside("-v ${sharedFolder}:${containerFolder}") {
             ANDROID_SCRIPT_PATH = 'vcx/ci/scripts/androidBuild.sh'
             LIBINDY_BRANCH="stable"
             LIBINDY_VERSION="1.6.2"
@@ -250,8 +251,10 @@ def buildAndroid(android, arch, sharedFolder) {
             sh "LIBINDY_BRANCH=${LIBINDY_BRANCH} LIBINDY_VERSION=${LIBINDY_VERSION} LIBINDY_TAG=${LIBINDY_TAG} ./${ANDROID_SCRIPT_PATH} ${arch}"
             // sh "sudo cp -rf vcx/ci/scripts/runtime_android_build/libvcx_${arch} /home/vcx/artifacts"
             sh "ls runtime_android_build"
-            sh "sudo cp -rf runtime_android_build/openssl_${arch}/ ${sharedFolder}"
+            sh "sudo cp -rf runtime_android_build/openssl_${arch}/ ${containerFolder}"
+            sh "ls ${containerFolder}"
         }
+        sh "ls ${sharedFolder}"
    }
 }
 
