--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -161,7 +161,16 @@ def android() {
 
                 sh "ls" 
                 unstash name: "libindy_arm"
+                sh "mkdir -p libindy_arm"
+                sh "ls libindy_arm"
+                sh "mv libindy.so libindy_arm"
+                sh "ls libindy_arm"
+                sh "ls"
                 unstash name: "libindy_x86"
+                sh "mkdir -p libindy_x86"
+                sh "ls libindy_x86"
+                sh "mv libindy.so libindy_x86"
+                sh "ls libindy_x86"
                 sh "ls" 
                 // unstash name: "libvcx_arm"
                 // // unstash name: "libvcx_arm64"
@@ -262,7 +271,7 @@ def buildAndroid(android, arch, sharedFolder) {
             sh "LIBINDY_BRANCH=${LIBINDY_BRANCH} LIBINDY_VERSION=${LIBINDY_VERSION} LIBINDY_TAG=${LIBINDY_TAG} ./${ANDROID_SCRIPT_PATH} ${arch}"
 
         }
-        stash includes: "runtime_android_build/libindy_${arch}", name: "libindy_${arch}"
+        stash includes: "runtime_android_build/libindy_${arch}/lib/libindy.so", name: "libindy_${arch}"
    }
 }
 
