more stash testing2

--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -161,17 +161,19 @@ def android() {
 
                 sh "ls" 
                 unstash name: "libindy_arm"
-                sh "mkdir -p libindy_arm"
-                sh "ls libindy_arm"
-                sh "mv libindy.so libindy_arm"
-                sh "ls libindy_arm"
                 sh "ls"
-                unstash name: "libindy_x86"
-                sh "mkdir -p libindy_x86"
-                sh "ls libindy_x86"
-                sh "mv libindy.so libindy_x86"
-                sh "ls libindy_x86"
-                sh "ls" 
+                // sh "mkdir -p libindy_arm"
+                // sh "ls libindy_arm"
+                // sh "mv libindy.so libindy_arm"
+                // sh "ls libindy_arm"
+                // sh "ls"
+                // unstash name: "libindy_x86"
+                // sh "mkdir -p libindy_x86"
+                // sh "ls libindy_x86"
+                // sh "mv libindy.so libindy_x86"
+                // sh "ls libindy_x86"
+                // sh "ls" 
+                //---------------------
                 // unstash name: "libvcx_arm"
                 // // unstash name: "libvcx_arm64"
                 // unstash name: "libvcx_x86"
